{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 102,
  "lineage": "b8d161a7-b65e-103e-fdb1-47fe1220ee64",
  "resources": [
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0528b67830f729ccf",
            "association_id": "eipassoc-002fb1431c6c71e23",
            "domain": "vpc",
            "id": "eipalloc-0528b67830f729ccf",
            "instance": "i-0a49a0b2abe922af6",
            "network_border_group": "us-west-2",
            "network_interface": "eni-043f80e54a3c1ac1a",
            "private_dns": "ip-10-0-1-143.us-west-2.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-52-42-98-231.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.98.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "backend_eip_0"
            },
            "tags_all": {
              "Name": "backend_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.server.aws_iam_instance_profile.ec2_krc_profile",
            "module.server.aws_iam_role.ec2_krc_iam_role",
            "module.server.aws_instance.backend",
            "module.server.aws_key_pair.tutorial_kp",
            "module.server.aws_security_group.backend_sg",
            "module.server.aws_subnet.public_subnet",
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_ami.ubuntu",
            "module.server.data.aws_availability_zones.available",
            "module.server.data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f3835078238cf5f",
            "arn": "arn:aws:ec2:us-west-2:727665411536:instance/i-0a49a0b2abe922af6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile_krc",
            "id": "i-0a49a0b2abe922af6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043f80e54a3c1ac1a",
            "private_dns": "ip-10-0-1-143.us-west-2.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-52-42-98-231.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.98.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034621b905d4b02c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9b3ab325d9c5a8b",
            "tags": {
              "Name": "backend_0"
            },
            "tags_all": {
              "Name": "backend_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f75a249cc3c1ba88"
            ]
          },
          "dependencies": [
            "module.server.aws_iam_instance_profile.ec2_krc_profile",
            "module.server.aws_iam_role.ec2_krc_iam_role",
            "module.server.aws_key_pair.tutorial_kp",
            "module.server.aws_security_group.backend_sg",
            "module.server.aws_subnet.public_subnet",
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_ami.ubuntu",
            "module.server.data.aws_availability_zones.available",
            "module.server.data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "evacuation_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:internet-gateway/igw-0298720c726b16291",
            "id": "igw-0298720c726b16291",
            "owner_id": "727665411536",
            "tags": {
              "Name": "evacuation_igw"
            },
            "tags_all": {
              "Name": "evacuation_igw"
            },
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "dependencies": [
            "module.server.aws_vpc.evacuation_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:route-table/rtb-0228c1c5846819218",
            "id": "rtb-0228c1c5846819218",
            "owner_id": "727665411536",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.server.aws_vpc.evacuation_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:route-table/rtb-0ec4a28510031e02b",
            "id": "rtb-0ec4a28510031e02b",
            "owner_id": "727665411536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0298720c726b16291",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.server.aws_internet_gateway.evacuation_igw",
            "module.server.aws_vpc.evacuation_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace65c496870becd",
            "route_table_id": "rtb-0228c1c5846819218",
            "subnet_id": "subnet-0ef8eadb6985c56ba"
          },
          "dependencies": [
            "module.server.aws_route_table.private_rt",
            "module.server.aws_subnet.private_subnet",
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f34bfb38c976f735",
            "route_table_id": "rtb-0228c1c5846819218",
            "subnet_id": "subnet-0117cef7c8d86363e"
          },
          "dependencies": [
            "module.server.aws_route_table.private_rt",
            "module.server.aws_subnet.private_subnet",
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00da12b7212248863",
            "route_table_id": "rtb-0ec4a28510031e02b",
            "subnet_id": "subnet-0b9b3ab325d9c5a8b"
          },
          "dependencies": [
            "module.server.aws_internet_gateway.evacuation_igw",
            "module.server.aws_route_table.public_rt",
            "module.server.aws_subnet.public_subnet",
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:security-group/sg-0f75a249cc3c1ba88",
            "description": "Security group for backend web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f75a249cc3c1ba88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP to port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP to port 4000",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTPs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "184.64.114.95/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "75.155.25.250/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "727665411536",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend_sg"
            },
            "tags_all": {
              "Name": "backend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.server.aws_vpc.evacuation_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:security-group/sg-065e12514c9ca5dcb",
            "description": "Security group for databases",
            "egress": [],
            "id": "sg-065e12514c9ca5dcb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Postgres traffic from only the backend sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f75a249cc3c1ba88"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "727665411536",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_sg"
            },
            "tags_all": {
              "Name": "db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.server.aws_security_group.backend_sg",
            "module.server.aws_vpc.evacuation_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:subnet/subnet-0ef8eadb6985c56ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef8eadb6985c56ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727665411536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_0"
            },
            "tags_all": {
              "Name": "private_subnet_0"
            },
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "dependencies": [
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:subnet/subnet-0117cef7c8d86363e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0117cef7c8d86363e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727665411536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "dependencies": [
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:subnet/subnet-0b9b3ab325d9c5a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9b3ab325d9c5a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727665411536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0"
            },
            "tags_all": {
              "Name": "public_subnet_0"
            },
            "vpc_id": "vpc-0bdc839f1b3edc2a4"
          },
          "dependencies": [
            "module.server.aws_vpc.evacuation_vpc",
            "module.server.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "evacuation_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:727665411536:vpc/vpc-0bdc839f1b3edc2a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4fccf68d1c5cdd0",
            "default_route_table_id": "rtb-041fbfa778694323c",
            "default_security_group_id": "sg-07a0874393aa9e367",
            "dhcp_options_id": "dopt-0d77bb330ac37db33",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bdc839f1b3edc2a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041fbfa778694323c",
            "owner_id": "727665411536",
            "tags": {
              "Name": "evacuation_vpc"
            },
            "tags_all": {
              "Name": "evacuation_vpc"
            }
          }
        }
      ]
    }
  ]
}